# Syphax-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  mkdocs.yml
.github/ISSUE_TEMPLATE/: config.yml  docs-feedback.yml
.github/docs/: pages-settings.md  release-checklist.md
.github/labels/: docs-labels.yml
.github/workflows/: cmake-single-platform.yml  docs-drift-audit.yml  docs-pages.yml  docs-quality.yml
TODO/: docs_and_scripts_update_2026-04-17  docs_sidebar_height_fix_2026-04-17  editor_sdf_naming_cleanup_2026-04-17  editor_sdf_path_cleanup_se_max_path_length_2026-04-17  editor_sdf_save_load_invalid_argument_2026-04-17  editor_sdf_shape_property_visibility_2026-04-17  editor_sdf_uniform_updates_2026-04-17  escape_quit_debug_2026-04-17  se_editor_data_access_2026-04-17
android/: AndroidManifest.xml.in
android/launcher/: se_android_main.c
cmake/: SyphaxEngineConfig.cmake.in
docs/: 404.md  contributing-docs.md  index.md  requirements.txt
docs/api-reference/: index.md
docs/audio/: index.md
docs/debug-and-performance/: index.md
docs/examples/: index.md
docs/glossary/: index.md  terms.md
docs/interaction/: index.md
docs/loading-and-assets/: index.md
docs/module-guides/: index.md  loader-se-gltf.md  loader-se-loader.md  se-audio.md  se-backend.md  se-camera.md  se-curve.md  se-debug.md  se-defines.md  se-editor.md  se-ext.md  se-framebuffer.md  se-graphics.md  se-input.md  se-math.md  se-model.md  se-navigation.md  se-noise.md  se-physics.md  se-quad.md  se-render-buffer.md  se-render-frame.md  se-render-thread.md  se-scene.md  se-sdf.md  se-shader.md  se-simulation.md  se-text.md  se-texture.md  se-ui.md  se-vfx.md  se-window.md  se-worker.md
docs/path/: add-sound.md  audio.md  backend.md  basic-shapes-and-scene2d.md  buttons-and-ui-basics.md  camera-orbit-and-pan.md  camera.md  colors-and-clear.md  curve.md  debug-overlay-and-traces.md  debug.md  draw-your-first-text.md  export-and-share.md  framebuffer.md  gltf.md  graphics.md  index.md  input.md  load-a-model.md  loader.md  model.md  motion-with-time.md  mouse-and-keyboard-input.md  navigation.md  particles-and-vfx.md  physics-as-motion.md  physics.md  render-buffer.md  scene.md  sdf.md  shader.md  simulation.md  text.md  texture.md  ui.md  utilities.md  vfx.md  window.md  your-first-3d-object.md
docs/physics/: index.md
docs/playbooks/: index.md  loader-se-gltf.md  loader-se-loader.md  se-audio.md  se-backend.md  se-camera.md  se-curve.md  se-debug.md  se-framebuffer.md  se-graphics.md  se-input.md  se-math-defines-ext-quad.md  se-model.md  se-navigation.md  se-physics.md  se-render-buffer.md  se-scene.md  se-sdf.md  se-shader.md  se-simulation.md  se-text.md  se-texture.md  se-ui.md  se-vfx.md  se-window.md
docs/runtime-and-platform/: index.md
docs/sdf/: index.md
docs/simulation-and-advanced/: index.md
docs/start-here/: error-handling.md  first-run-checklist.md  first-window.md  frame-loop-basics.md  index.md  install-and-build.md  project-layout.md  resource-paths.md  what-is-syphax.md
docs/templates/: api-module-template.md  concept-page-template.md  example-walkthrough-template.md  glossary-entry-template.md  path-template.md  playbook-template.md  style-guide.md  troubleshooting-template.md
docs/three-d-and-camera/: index.md
docs/troubleshooting/: docs-build.md
docs/ui/: index.md
docs/utilities/: index.md
docs/vfx/: index.md
docs/visual-building-blocks/: index.md
examples/: 10_scene3d.c  11_input.c  12_physics2d.c  13_physics3d.c  14_gltf_load.c  15_gltf_viewer.c  16_sdf.c  17_navigation.c  18_input_actions.c  19_ui_widgets.c  1_hello.c  20_debug_tools.c  21_context_lifecycle.c  21_scene_qol.c  22_simulation.c  23_simulation_advanced.c  24_vfx.c  2_array.c  3_window.c  4_text.c  5_audio.c  6_ui.c  7_scene2d.c  8_scene2d_inst.c  99_game.c  9_multi_window.c  array_example.c  audio_basics.c  audio_example.c  gltf_example.c  gltf_load_example.c  gltf_viewer_example.c  hello.c  hello_text.c  input_actions.c  model_viewer.c  multi_window_example.c  physics2d_playground.c  physics3d_playground.c  physics_2d.c  (+15 more)
examples/advanced/: array_handles.c  civilization.c  context_lifecycle.c  debug_tools.c  editor_sdf.c  editor_showcase.c  gltf_roundtrip.c  multi_window.c  navigation_grid.c  noise_texture.c  rts_integration.c  sdf_bake.c  sdf_bake_volume.c  sdf_json_roundtrip.c  sdf_nested_refs.c  sdf_path_steps.c  sdf_playground.c  sdf_root_streaming.c  sdf_stress_refs.c  sdf_unique_entities.c  simulation_advanced.c  simulation_intro.c  ui_showcase.c  vfx_emitters.c
include/: se.h  se_audio.h  se_backend.h  se_camera.h  se_camera_controller.h  se_curve.h  se_debug.h  se_defines.h  se_editor.h  se_ext.h  se_framebuffer.h  se_gltf.h  se_graphics.h  se_input.h  se_loader.h  se_math.h  se_model.h  se_navigation.h  se_noise.h  se_physics.h  se_quad.h  se_render.h  se_render_buffer.h  se_render_frame.h  se_render_thread.h  se_rhi.h  se_scene.h  se_sdf.h  se_shader.h  se_simulation.h  se_text.h  se_texture.h  se_ui.h  se_vfx.h  se_window.h  se_worker.h
include/loader/: se_gltf.h  se_loader.h
resources/: README.md
resources/shaders/: object_2d_vertex.glsl  object_2d_vertex_instanced.glsl  render_buffer_vert.glsl  scene_2d_output_frag.glsl  text_frag.glsl  text_vert.glsl
scripts/: check_example_line_budget.sh  example_line_budget_allowlist.txt
scripts/android/: build_native_activity.sh
scripts/docs/: build.sh  capture_examples.sh  capture_sdf_steps.sh  check_api_sync.sh  check_content_quality.sh  check_example_coverage.sh  serve.sh  (+10 more)
src/: se.c  se_audio.c  se_audio.h  se_backend.c  se_camera.c  se_camera_controller.c  se_curve.c  se_debug.c  se_defines.h  se_editor.c  se_ext.c  se_frambuffer.c  se_gl.c  se_gl.h  se_gltf.c  se_gltf.h  se_input.c  se_math.c  se_math.h  se_model.c  se_navigation.c  se_noise.c  se_paths.c  se_physics.c  se_physics.h  se_render.c  se_render.h  se_render_buffer.c  se_render_frame.c  se_render_thread.c  se_resource_io.c  se_resource_io.h  se_result.c  se_scene.c  se_scene.h  se_sdf.c  se_shader.c  se_simulation.c  se_text.c  se_text.h  (+9 more)
(+224 files in other folders)
